; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/prom/extr_ranges.c_prom_apply_obio_ranges.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/prom/extr_ranges.c_prom_apply_obio_ranges.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.linux_prom_registers = type { i32 }

@num_obio_ranges = common dso_local global i64 0, align 8
@promlib_obio_ranges = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @prom_apply_obio_ranges(%struct.linux_prom_registers* %0, i32 %1) #0 {
  %3 = alloca %struct.linux_prom_registers*, align 8
  %4 = alloca i32, align 4
  store %struct.linux_prom_registers* %0, %struct.linux_prom_registers** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* @num_obio_ranges, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = load %struct.linux_prom_registers*, %struct.linux_prom_registers** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @promlib_obio_ranges, align 4
  %11 = load i64, i64* @num_obio_ranges, align 8
  %12 = call i32 @prom_adjust_regs(%struct.linux_prom_registers* %8, i32 %9, i32 %10, i64 %11)
  br label %13

13:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @prom_adjust_regs(%struct.linux_prom_registers*, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
